--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,12 @@
     background-color: #303030;
   }
   
+  .header-inner {
+    width:80%;
+    height:80px;
+    background-color: green;
+    margin: 0 auto;
+  }
   .app-logo {
     float:left;
     display: block;
@@ -40,4 +46,15 @@
     padding: 10px 15px;
     color:#FFF;
     font-weight: bold;
+  }
+
+  /* main slider */
+
+  .main-slider {
+    width:100%;
+    height:380px;
+    background-color:green;
+    background-image:url('../img/slider/bg-slider1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
