--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
   body,
   html {
     width: 100%;
+    height: 100%;
   }
   
   .main-header {
@@ -27,7 +28,7 @@
     height: 80px;
     max-width: 100%;
     background-color: red;
-    background-image: url(../img/sm-logo.png);
+    background-image: url(../img/slider/sm-logo.jpg);
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -57,4 +58,46 @@
     background-image:url('../img/slider/bg-slider1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  /* main container */
+
+  .main-container {
+    width: 80%;
+    height: 100%;
+    background-color: green;
+    margin: 0 auto;
+  }
+
+  /* top banner */
+  .top-banner {
+    width:100%;
+    height: 130px;
+    background-color: red;
+    background-image:url('../img/slider/sm-top-banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+  }
+  /* main-content */
+  .main-content {
+    height:100%;
+    width:100%;
+
+  }
+  .content{
+    width:70%;
+    padding:1% 2.5%;
+    height:100%;
+    float:left;
+    background-color:purple;
+  }
+
+  /* sidebar */
+  .right-sidebar {
+    width:20%;
+    padding:1% 2.5%;
+    height:100%;
+    background-color:orange;
+    float:right;
   }
