--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@
   .main-slider {
     width:100%;
     height:380px;
-    background-color:green;
+    /* background-color:green; */
     background-image:url('../img/slider/bg-slider1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -64,14 +64,16 @@
 
   .main-container {
     width: 80%;
-    height: 100%;
-    background-color: green;
+    height: auto;
+    overflow:auto;
+    /* background-color: green; */
     margin: 0 auto;
   }
 
   /* top banner */
   .top-banner {
     width:100%;
+    margin:20px 0;
     height: 130px;
     background-color: red;
     background-image:url('../img/slider/sm-top-banner.jpg');
@@ -86,19 +88,19 @@
 
   }
   .content{
-    width:70%;
-    padding:1% 2.5%;
+    width:72.5%;
+    padding:0% 2.5% 0px 0px;
     height:100%;
     float:left;
-    background-color:purple;
+    /* background-color:purple; */
   }
 
   /* sidebar */
   .right-sidebar {
-    width:20%;
-    padding:1% 2.5%;
-    height:100%;
-    background-color:orange;
+    width:25%;
+    /* padding:1% 2.5%; */
+    height:1000px;
+    /* background-color:orange; */
     float:right;
   }
   /* content top banner */
@@ -113,7 +115,8 @@
   .sidebar-banner {
     width:100%;
     height:100%;
-    background-image:url('../img/slider/bg-sidebar-banner.jpg')
+    background-image:url('../img/slider/bg-sidebar-banner.jpg');
+    background-repeat:no-repeat;
 
   }
   /* article banner */
@@ -161,4 +164,13 @@
 
   .sub-article-banner > img {
     width:100%;
+  }
+
+  /* main footer */
+  .footer-container {
+    display:block;
+    clear:both;
+    width:100%;
+    height:90px;
+    background-color:#ccc;
   }
