--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
   .header-inner {
     width:80%;
     height:80px;
-    background-color: green;
+    /* background-color: green; */
     margin: 0 auto;
   }
   .app-logo {
@@ -67,7 +67,7 @@
     height: auto;
     overflow:auto;
     /* background-color: green; */
-    margin: 0 auto;
+    margin: 0 auto 50px;
   }
 
   /* top banner */
@@ -171,6 +171,37 @@
     display:block;
     clear:both;
     width:100%;
-    height:90px;
     background-color:#ccc;
+    overflow:auto;
+    
   }
+  .footer-container > span {
+    display:block;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  /* card list */
+  .card-list, .footer-links {
+    text-align:center;
+
+  }
+  .card-list li, .footer-links li {
+    margin-top: 10px;
+    display: inline-block;
+    margin-right:10px;
+    
+  }
+  .card-list li:last-child {
+    margin-right:0px;
+
+  }
+  .footer-links li a {
+    text-decoration: none;
+    font-weight: bold;
+  }
+  .footer-links {
+    margin-bottom: 10px;
+  }
+
+  
