--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@
     height: 100%;
   }
   
+  hgroup{
+
+  }
   .main-header {
     width: 100%;
     height: 80px;
@@ -139,7 +142,7 @@
   .sub-articles ul li {
     width: 25%;
     margin:20px 4% 20px 0px;
-    height:300px;
+    height:400px;
     list-style-type:none;
     display: inline-block;
 
@@ -177,7 +180,7 @@
   }
   .footer-container > span {
     display:block;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     text-align: center;
   }
 
@@ -203,5 +206,9 @@
   .footer-links {
     margin-bottom: 10px;
   }
-
+  .footer-text {
+    text-align: center;
+    margin:10px auto 20px;
+    max-width: 50%;
+  }
   
